# verifiabl

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATIONS.md  LICENSE  README.md  SECURITY.md  auth.py  main.py  models.py  pyproject.toml  recorder.py  store.py  worker.py  wrangler.toml
.cursor/rules/: verifiabl-add-integration.mdc  (+3 more)
.github/: pull_request_template.md
fixtures/: adobesign.json  ahrefs.json  airtable.json  asana.json  assemblyai.json  atlassian.json  box.json  brave.json  bubble.json  calcom.json  chatprd.json  cinder.json  claude.json  clay.json  cloudflare.json  concur.json  coupa.json  coupler.json  crowdstrike.json  databricks.json  decagon.json  depthfirst.json  docusign.json  dropbox.json  elevenlabs.json  feedly.json  fern.json  figma.json  flyio.json  framer.json  gemini.json  github.json  gitlab.json  gong.json  googleworkspace.json  gotomeeting.json  groq.json  gumloop.json  hubspot.json  huggingface.json  (+78 more)
mocks/: adobesign.py  ahrefs.py  airtable.py  asana.py  assemblyai.py  atlassian.py  base.py  box.py  brave.py  bubble.py  calcom.py  chatprd.py  cinder.py  claude.py  clay.py  cloudflare.py  concur.py  coupa.py  coupler.py  crowdstrike.py  databricks.py  decagon.py  depthfirst.py  docusign.py  dropbox.py  elevenlabs.py  feedly.py  fern.py  figma.py  flyio.py  framer.py  gemini.py  github.py  gitlab.py  gong.py  googleworkspace.py  gotomeeting.py  groq.py  gumloop.py  hubspot.py  (+79 more)
scripts/: block_private_paths.sh  scaffold.py  seed_universal.py
tests/: test_app.py
(+4 files in other folders)
