[project]
name = "verifiabl"
version = "0.1.0"
description = "Schema-faithful mock API server for AI coding agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "httpx",
  "itsdangerous",
  "python-dotenv",
]

[dependency-groups]
dev = [
  "uvicorn[standard]",
  "workers-py",
  "workers-runtime-sdk",
  "ruff",
  "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["python_modules"]
